--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <title>Abel Zecharias</title>
   </head>
-
   <body>
     <div class="loader-bg">
       <div class="loader"></div>
@@ -19,8 +18,7 @@
     <header>
       <div class="logo-nav">
         <a href="">
-          <h2>Abel<span id="dot">.</span></h2></a
-        >
+          <h2>Abel<span id="dot">.</span></h2></a>
       </div>
       <div class="menu">
         <ul>
