--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is my portfolio" />
+    <meta name="description" content="Abel Zecharias is an independent front-end web developer who creates stunning websites and applications with cutting-edge technologies. Learn more about his skills, portfolio, and contact details.">
+    <meta name="keywords" content="web developer, front-end developer, web design, web development, HTML, CSS, JavaScript">
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <title>Abel Zecharias</title>
+    <title>Abel Zecharias - Front-End Web Developer</title>
   </head>
   <body>
     <div class="loader-bg">
       <div class="loader"></div>
-      
+
     </div>
     <div id="top"></div>
     <header>
