--- a/index.html
+++ b/index.html
@@ -88,17 +88,40 @@
         </div>
       </div>
       <div class="anm">
-        <a href="#about"><div class="arrow"></div></a>
+        <a href="#abt"><div class="arrow"></div></a>
       </div>
-      <div class="about-me">
-        <div class="ab-header">
-          <div class="ab-title"><h3 id="about">ABOUT ME</h3></div>
-        </div>
+      <div id="abt" class="about-me">
         <div class="details">
+          <h3 id="heading">About Me</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, provident. Sit natus aperiam tempora pariatur vero fuga, dignissimos nemo et perspiciatis distinctio, facere quis deserunt in aut quos quibusdam totam.</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam dolores eos, eius ducimus aliquam dignissimos! Vero vel consequatur enim cum ipsam, perspiciatis aspernatur ducimus quo delectus, nihil laborum asperiores cupiditate.</p>
+        <div class="info">
+          <div class="tp-ag">
+          <div class="ag-info">BORN IN</div>
+          <div class="ag-info">EXPERIENCE</div>
+          <div class="ag-info">DATE OF BIRTH</div>
         </div>
-        <div ></div>
+        <div class="tp-nm">
+          <div class="nm-info">ADDIS ABABA</div>
+          <div class="nm-info">7+ YEARS</div>
+          <div class="nm-info">29 JAN 1996</div>
+        </div>
       </div>
+        </div>
+     
+       <div class="progress">
+       <div class="numbers">
+       <div class="nums">100+</div>
+        <div class="nums">50+</div>
+        <div class="nums">30+</div>
+      </div>
+      <div class="texts">
+      <div class="txts">Project Completed</div>
+      <div class="txts">Design Porject</div>
+      <div class="txts">Dev Project</div>
+      </div>
+    </div>
+  </div>
       <h1>hello</h1>
   </body>
 </html>
