--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Abel Zecharias is an independent front-end web developer who creates stunning websites and applications with cutting-edge technologies. Learn more about his skills, portfolio, and contact details.">
+    <meta name="description" content="Abel Zecharias Abel Zecharias, a talented front-end web developer who designs amazing websites and apps using the latest technologies. Check out his skills, portfolio, and contact information to learn more about him.">
     <meta name="keywords" content="web developer, front-end developer, web design, web development, HTML, CSS, JavaScript">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
@@ -108,7 +108,6 @@
         </div>
       </div>
         </div>
-     
        <div class="progress">
        <div class="numbers">
        <div class="nums">100+</div>
